--- a/templates/attributes/index.html.twig
+++ b/templates/attributes/index.html.twig
@@ -35,8 +35,8 @@
 				<thead>
 					<tr>
 						<th>Id</th>
-						<th>Name</th>
-						<th>Value</th>
+						<th>Nom</th>
+						<th>Valeur</th>
 						<th>actions</th>
 					</tr>
 				</thead>
