--- a/templates/attributes/show.html.twig
+++ b/templates/attributes/show.html.twig
@@ -41,11 +41,11 @@
 						<td>{{ attribute.id }}</td>
 					</tr>
 					<tr>
-						<th>Name</th>
+						<th>Nom</th>
 						<td>{{ attribute.name }}</td>
 					</tr>
 					<tr>
-						<th>Value</th>
+						<th>Valeur</th>
 						<td>{{ attribute.value }}</td>
 					</tr>
 				</tbody>
