--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -35,12 +35,12 @@
 				<thead>
 					<tr>
 						<th>Id</th>
-						<th>Title</th>
+						<th>Titre</th>
 						<th>Description</th>
-						<th>Keywords</th>
-						<th>Meta_tag_title</th>
-						<th>Meta_tag_description</th>
-						<th>Meta_tag_keywords</th>
+						<th>Mots-clés</th>
+						<th>Titre en méta donnée</th>
+						<th>Description en méta donnée</th>
+						<th>Mots-clés en méta donnée</th>
 						<th>Image</th>
 						<th>Slug</th>
 						<th>actions</th>
