--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -38,7 +38,7 @@
 						<td>{{ category.id }}</td>
 					</tr>
 					<tr>
-						<th>Title</th>
+						<th>Titre</th>
 						<td>{{ category.title }}</td>
 					</tr>
 					<tr>
@@ -46,19 +46,19 @@
 						<td>{{ category.description }}</td>
 					</tr>
 					<tr>
-						<th>Keywords</th>
+						<th>Mots-clés</th>
 						<td>{{ category.keywords ? category.keywords|json_encode : '' }}</td>
 					</tr>
 					<tr>
-						<th>Meta_tag_title</th>
+						<th>Titre en méta donnée</th>
 						<td>{{ category.metaTagTitle }}</td>
 					</tr>
 					<tr>
-						<th>Meta_tag_description</th>
+						<th>Description en méta donnée</th>
 						<td>{{ category.metaTagDescription }}</td>
 					</tr>
 					<tr>
-						<th>Meta_tag_keywords</th>
+						<th>Mots-clés en méta donnée</th>
 						<td>{{ category.metaTagKeywords ? category.metaTagKeywords|json_encode : '' }}</td>
 					</tr>
 					<tr>
