--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -36,7 +36,7 @@
 				<thead>
 					<tr>
 						<th>Pseudo</th>
-						<th>Content</th>
+						<th>Contenu</th>
 						<th>actions</th>
 					</tr>
 				</thead>
