--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -45,7 +45,7 @@
 						<td>{{ comment.pseudo }}</td>
 					</tr>
 					<tr>
-						<th>Content</th>
+						<th>Contenu</th>
 						<td>{{ comment.content }}</td>
 					</tr>
 				</tbody>
