--- a/templates/languages/index.html.twig
+++ b/templates/languages/index.html.twig
@@ -36,7 +36,7 @@
 				<thead>
 					<tr>
 						<th>Id</th>
-						<th>Name</th>
+						<th>Nom</th>
 						<th>Flag</th>
 						<th>actions</th>
 					</tr>
