--- a/templates/messages/show.html.twig
+++ b/templates/messages/show.html.twig
@@ -35,7 +35,7 @@
 			<table class="table">
 				<tbody>
 					<tr>
-						<th>Name</th>
+						<th>Nom</th>
 						<td>{{ message.name }}</td>
 					</tr>
 					<tr>
@@ -43,11 +43,11 @@
 						<td>{{ message.email }}</td>
 					</tr>
 					<tr>
-						<th>Phone</th>
+						<th>Téléphone</th>
 						<td>{{ message.phone }}</td>
 					</tr>
 					<tr>
-						<th>Subject</th>
+						<th>Objet</th>
 						<td>{{ message.subject }}</td>
 					</tr>
 					<tr>
