--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -36,18 +36,18 @@
 				<thead>
 					<tr>
 						<th>Id</th>
-						<th>Title</th>
+						<th>Titre</th>
 						<th>Description</th>
-						<th>Hangout_location</th>
-						<th>Keywords</th>
+						<th>Lieu de sortie</th>
+						<th>Mots-clés</th>
 						<th>Image</th>
-						<th>Meta_tag_title</th>
-						<th>Meta_tag_description</th>
-						<th>Meta_tag_keywords</th>
+						<th>Titre en méta donnée</th>
+						<th>Description en méta donnée</th>
+						<th>Mots-clés en méta donnée</th>
 						<th>Reference</th>
 						<th>Weezeevent</th>
-						<th>Created_at</th>
-						<th>Updated_at</th>
+						<th>Créé le</th>
+						<th>Modifié le</th>
 						<th>Pre_tax_price</th>
 						<th>Tax_included_price</th>
 						<th>Slug</th>
@@ -68,8 +68,8 @@
 							<td>{{ product.metaTagKeywords ? product.metaTagKeywords|json_encode : '' }}</td>
 							<td>{{ product.reference }}</td>
 							<td>{{ product.weezeevent }}</td>
-							<td>{{ product.createdAt ? product.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-							<td>{{ product.updatedAt ? product.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+							<td>{{ product.createdAt ? product.createdAt|date('d-m-Y H:i:s') : '' }}</td>
+							<td>{{ product.updatedAt ? product.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
 							<td>{{ product.preTaxPrice }}</td>
 							<td>{{ product.taxIncludedPrice }}</td>
 							<td>{{ product.slug }}</td>
