--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - avis client
-	{{ comment.id }}
+{% block title %}Ludo et Sophie - avis client de
+	{{ comment.pseudo }}
+	le
+	{{ comment.createdAt|date('d-m-Y H:i:s') }}
 {% endblock %}
 
 {% block body %}
@@ -10,8 +12,10 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - avis client
-						{{ comment.id }}</h1>
+					<h1 class="m-0 text-dark">Ludo et Sophie - avis client de
+						{{ comment.pseudo }}
+						le
+						{{ comment.createdAt|date('d-m-Y H:i:s') }}</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -37,12 +41,18 @@
 			<table class="table">
 				<tbody>
 					<tr>
-						<th>Id</th>
-						<td>{{ comment.id }}</td>
-					</tr>
-					<tr>
 						<th>Pseudo</th>
 						<td>{{ comment.pseudo }}</td>
+					</tr>
+					<tr>
+						<th>Ecrit le</th>
+						<td>{{ comment.createdAt|date('d-m-Y H:i:s') }}</td>
+					</tr>
+					<tr>
+						<th>Concernant la sortie</th>
+						<td>
+							<a title="Voir la sortie associée" href="{{ path('products_show', {id:comment.product.id}) }}">{{ comment.product.title }}</a>
+						</td>
 					</tr>
 					<tr>
 						<th>Contenu</th>
