--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -62,7 +62,13 @@
 						</tr>
 					{% endfor %}
 				</tbody>
+				<div>
+					{{ knp_pagination_render(comments) }}
+				</div>
 			</table>
+			<div>
+				{{ knp_pagination_render(comments) }}
+			</div>
 		</div>
 	</div>
 {% endblock %}
