--- a/templates/messages/index.html.twig
+++ b/templates/messages/index.html.twig
@@ -66,7 +66,13 @@
 						</tr>
 					{% endfor %}
 				</tbody>
+				<div>
+					{{ knp_pagination_render(messages) }}
+				</div>
 			</table>
+			<div>
+				{{ knp_pagination_render(messages) }}
+			</div>
 
 		</div>
 	</div>
