--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -65,7 +65,13 @@
 						</tr>
 					{% endfor %}
 				</tbody>
+				<div>
+					{{ knp_pagination_render(users) }}
+				</div>
 			</table>
+			<div>
+				{{ knp_pagination_render(users) }}
+			</div>
 
 			<a href="{{ path('users_new') }}">Créer nouvel utilisateur</a>
 		</div>
