--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -36,8 +36,7 @@
 
 			<!-- Small boxes (Stat box) -->
 			<div class="row">
-				<div
-					class="col-lg-3 col-6">
+				<div class="col-lg-3 col-6">
 					<!-- small box -->
 					<div class="small-box bg-info">
 						<div class="inner">
